添加retrofit&协程的网络请求方式；2、集成jetpack架构组件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+def support = rootProject.ext.dependencies
+def versions = rootProject.ext.versions
 android {
     signingConfigs {
         release {
@@ -12,18 +13,27 @@ android {
             storePassword 'hnsh@)!('
         }
     }
-    compileSdkVersion 29
+    compileSdkVersion 30
     defaultConfig {
-        flavorDimensions "city"
-        applicationId "com.hnsh.dialogue.car"
+        flavorDimensions "ai"
+        applicationId "com.hnsh.dialogue"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 13
-        versionName "1.3"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 30
+        versionCode 100
+        versionName "1.0.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            // 配置retrofit baseUrl
+            buildConfigField("String", "BASE_URL", "\"http://www.sh.dmonkey.cn/shuanghou/\"")
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            // 配置retrofit baseUrl
+            buildConfigField("String", "BASE_URL", "\"http://www.sh.dmonkey.cn/shuanghou/\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -48,11 +58,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-//    flavorDimensions
-    productFlavors {
 
-        yazhou {
-            dimension "city"
+    productFlavors {
+        taxi {
+            applicationIdSuffix ".taxi"
+            manifestPlaceholders = [APP_NAME: "一路通"]
         }
     }
 
@@ -62,33 +72,33 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.0'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0'
-    implementation 'com.android.support:design:27.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:palette-v7:27.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.palette:palette:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation("com.github.bumptech.glide:glide:4.6.1") {
         exclude group: "com.android.support"
     }
-
     implementation 'com.dosmono.library:ai-model:2.0.4_beta19'
     implementation 'com.dosmono.library:universal:2.0.4_beta01'
-
-//    implementation 'com.dosmono.library:ai-model:2.0.2_beta07'
-//    implementation 'com.dosmono.library:universal:2.0.2_beta13'
-    implementation "com.android.support:multidex:1.0.3"
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
     implementation "org.greenrobot:eventbus:3.0.0"
     implementation("com.jaeger.statusbarutil:library:1.5.1") {
         exclude group: 'com.android.support'
     }
+    support.each { k, v -> implementation v }
 }
