1、完成首页底部菜单栏编写；2、实现跳转对话翻译模块；3、实现版本更新接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:ignore="ProtectedPermissions" />
 
     <application
-        android:name=".MyApp"
+        android:name=".jet.common.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/icon_logo"
         android:label="${APP_NAME}"
@@ -47,7 +47,7 @@
             android:name=".ui.UnfCommonPhraseActivity"
             android:configChanges="locale|layoutDirection"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".jet.main.view.MenuDataActivity"/>
+        <activity android:name="com.hnsh.dialogue.jet.modules.home.view.HomeActivity"/>
     </application>
 
 </manifest>
